update css styles

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     
     <header>
-        <strong><h1>Andrew Mason</h1></strong>
+        <strong><h1>ANDREW MASON</h1></strong>
         <nav>
             <ul class="nav-links">
-                <li><a href="#about-me">About Me</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><strong><a href="#about-me">ABOUT ME</a></strong></li>
+                <li><strong><a href="#projects">PROJECTS</a></strong></li>
+                <li><strong><a href="#contact">CONTACT</a></strong></li>
             </ul>
         </nav>
     </header>
